--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -1,6 +1,5 @@
+
 .contact__inner {
-	height: 30vh;
-	background-color: var(--main-color);
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -10,27 +9,19 @@
 .contact__col {
 	width: 33%;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
-}
-
-.contact__circle {
-	width: 200px;
-	height: 200px;
-	border-radius: 50%;
-	background-color: var(--white-color);
-	position: relative;
-	border: 2px solid var(--main-color);
-	margin-top: -50px;
+	gap: 20px;
 }
 
 .contact__circle-text {
 	color: var(--main-color);
 	width: 100%;
 	height: 100%;
+	gap: 15px;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: flex-start;
+	align-items: flex-start;
 	flex-direction: column;
 
 	svg {
