--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,9 +1,12 @@
+
 .footer__inner {
 	margin: 0 auto;
 	text-align: center;
+	border-top: 1px solid var(--main-color);
+	padding: 10px 0;
 }
 
 .footer {
-	margin-top: 200px;
+	margin-top: 50px;
 	margin-bottom: 10px;
 }
