--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -1,9 +1,16 @@
-
 .footer__inner {
 	margin: 0 auto;
 	text-align: center;
 	border-top: 1px solid var(--main-color);
 	padding: 10px 0;
+
+	p {
+		font-size: 12px;
+
+		@include md-min {
+			font-size: 16px;
+		}
+	}
 }
 
 .footer {
