--- a/src/assets/styles/fullimg.scss
+++ b/src/assets/styles/fullimg.scss
@@ -1,5 +1,10 @@
 .fullimg__img {
-	width: 33%;
+	width: 100%;
+	aspect-ratio: 1/1;
+
+	@include md-min {
+		width: 33%;
+	}
 }
 
 .fullimg {
@@ -8,17 +13,17 @@
 	flex-direction: column;
 	justify-content: space-between;
 	gap: 20px;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 
 	@include md-min {
 		flex-direction: row;
+		margin-bottom: 100px;
 	}
 }
 
 .fullimg__img {
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 400px;
 }
 
 .fullimg__img-1 {
