--- a/src/assets/styles/highlights.scss
+++ b/src/assets/styles/highlights.scss
@@ -13,10 +13,10 @@
 }
 
 .highlights__item {
-	width: 33%;
+	width: 100%;
 	background-color: var(--main-color);
 	padding: 20px;
-	min-height: 350px;
+	min-height: 250px;
 	position: relative;
 
 	&::before {
@@ -32,5 +32,14 @@
 
 	svg {
 		font-size: 25px;
+	}
+
+	h2 {
+		padding-bottom: 10px;
+	}
+
+	@include md-min {
+		width: 33%;
+		min-height: 350px;
 	}
 }
