--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -1,5 +1,3 @@
-
-
 .menu {
 	position: fixed;
 	top: 0;
@@ -7,6 +5,7 @@
 	padding: 20px;
 	color: var(--white-color);
 	z-index: 111;
+	max-width: 100vw;
 
 	.menu-open & {
 		background-color: var(--white-color);
@@ -25,12 +24,15 @@
 	justify-content: space-between;
 	align-items: center;
 	font-size: 20px;
-	margin: 0 20px;
+
+	@include md-min {
+		margin: 0 20px;
+	}
 }
 
 .menu__col-right {
 	font-weight: 400;
-	font-size: 20px;
+	font-size: 14px;
 
 	@include md-min {
 		font-size: 30px;
@@ -53,7 +55,8 @@
 	a {
 		color: var(--white-color);
 
-		.menu-scrolled & {
+		.menu-scrolled &,
+		.menu-open & {
 			color: var(--black-color);
 		}
 	}
@@ -71,7 +74,7 @@
 /* Fullscreen menu */
 .fullscreen-menu {
 	position: fixed;
-	top: 85px;
+	top: 77.5px;
 	left: 0;
 	width: 100vw;
 	height: 100vh;
@@ -83,6 +86,10 @@
 	align-items: center;
 	justify-content: center;
 	padding: 40px;
+
+	@include md-max {
+		top: 57.5px;
+	}
 }
 
 .fullscreen-menu__list {
@@ -100,13 +107,17 @@
 
 .menu__list-item a {
 	text-decoration: none;
-	font-size: 30px;
+	font-size: 20px;
 	color: #000;
 	font-weight: 300;
 
 	&:hover {
 		text-decoration: underline;
 		text-decoration-thickness: 1px;
+	}
+
+	@include md-min {
+		font-size: 30px;
 	}
 }
 
