--- a/src/assets/styles/work.scss
+++ b/src/assets/styles/work.scss
@@ -1,54 +1,88 @@
-
 .work__images {
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	grid-template-rows: repeat(6, 1fr);
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	justify-content: center;
+	align-items: center;
+
+	@include md-min {
+		display: grid;
+		grid-template-columns: repeat(6, 1fr);
+		grid-template-rows: repeat(6, 1fr);
+		grid-column-gap: 20px;
+		grid-row-gap: 20px;
+	}
 }
 
 .image-grid {
 	background-repeat: no-repeat;
 	background-size: contain;
+	width: 100%;
+	height: 100%;
 	min-height: 300px;
+	margin: 0 auto;
+	background-position: center;
 
+	@include md-min {
+		min-height: 300px;
+	}
 }
 
 .image-grid-1 {
-	grid-area: 1 / 1 / 3 / 4;
+	@include md-min {
+		grid-area: 1 / 1 / 3 / 4;
+	}
 	background-size: cover;
 	background-image: url(../../assets//images/slider-img-14.jpg);
 }
 
 .image-grid-2 {
-	grid-area: 1 / 4 / 4 / 7;
-	background-size: contain;
 	background-image: url(../../assets//images/slider-img-15.jpg);
+
+	@include md-min {
+		grid-area: 1 / 4 / 4 / 7;
+		background-size: contain;
+	}
 }
 
 .image-grid-3 {
-	grid-area: 3/2/5/4;
-	background-size: cover;
+	@include md-min {
+		grid-area: 3/2/5/4;
+		background-size: cover;
+	}
 	background-image: url(../../assets//images/slider-img-6.jpg);
 }
 
 .image-grid-4 {
-	grid-area: 6/4/4/7;
-	background-size: contain;
+	@include md-min {
+		grid-area: 6/4/4/7;
+		background-size: contain;
+	}
 	background-image: url(../../assets//images/slider-img-9.jpg);
 }
 
 .image-grid-5 {
-	grid-area: 5/2/7/7;
-	background-size: contain;
+	@include md-min {
+		grid-area: 5/2/7/7;
+		background-size: contain;
+	}
 	background-image: url(../../assets//images/slider-img-8.jpg);
 }
 .image-grid-7 {
-	grid-area: 5/2/7/7;
-	background-size: contain;
+	@include md-min {
+		grid-area: 5/2/7/7;
+		background-size: contain;
+	}
 	background-image: url(../../assets//images/slider-img-7.jpg);
 }
 
+// .image-grid-6 {
+// 	background-color: #666565;
+// }
+
+.image-grid-8 {
+	display: none;
+}
 .image-grid-6 {
-	background-color: #666565;
+	display: none;
 }
