--- a/src/assets/styles/work.scss
+++ b/src/assets/styles/work.scss
@@ -1,88 +1,123 @@
 .work__images {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 20px;
 	justify-content: center;
 	align-items: center;
 
 	@include md-min {
-		display: grid;
-		grid-template-columns: repeat(6, 1fr);
-		grid-template-rows: repeat(6, 1fr);
-		grid-column-gap: 20px;
-		grid-row-gap: 20px;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		flex-wrap: wrap;
 	}
 }
 
 .image-grid {
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: cover;
 	width: 100%;
 	height: 100%;
 	min-height: 300px;
-	margin: 0 auto;
 	background-position: center;
+	cursor: pointer;
 
 	@include md-min {
 		min-height: 300px;
+		width: 18%;
 	}
 }
 
 .image-grid-1 {
-	@include md-min {
-		grid-area: 1 / 1 / 3 / 4;
-	}
-	background-size: cover;
 	background-image: url(../../assets//images/slider-img-14.jpg);
 }
 
 .image-grid-2 {
 	background-image: url(../../assets//images/slider-img-15.jpg);
-
-	@include md-min {
-		grid-area: 1 / 4 / 4 / 7;
-		background-size: contain;
-	}
 }
 
 .image-grid-3 {
-	@include md-min {
-		grid-area: 3/2/5/4;
-		background-size: cover;
-	}
 	background-image: url(../../assets//images/slider-img-6.jpg);
 }
 
 .image-grid-4 {
-	@include md-min {
-		grid-area: 6/4/4/7;
-		background-size: contain;
-	}
 	background-image: url(../../assets//images/slider-img-9.jpg);
 }
 
 .image-grid-5 {
-	@include md-min {
-		grid-area: 5/2/7/7;
-		background-size: contain;
-	}
 	background-image: url(../../assets//images/slider-img-8.jpg);
 }
 .image-grid-7 {
-	@include md-min {
-		grid-area: 5/2/7/7;
-		background-size: contain;
-	}
 	background-image: url(../../assets//images/slider-img-7.jpg);
 }
 
-// .image-grid-6 {
-// 	background-color: #666565;
-// }
-
 .image-grid-8 {
-	display: none;
+	background-image: url(../../assets//images/slider-img-4.jpg);
 }
 .image-grid-6 {
-	display: none;
+	background-image: url(../../assets//images/slider-img-8.jpg);
+}
+
+.image-grid-9 {
+	background-image: url(../../assets//images/slider-img-8.jpg);
+}
+
+.image-grid-10 {
+	background-image: url(../../assets//images/slider-img-8.jpg);
+}
+
+.slider-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.8);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 999;
+}
+
+.slider-content {
+	position: relative;
+	max-width: 90%;
+	max-height: 90%;
+}
+
+.slider-image {
+	max-width: 100%;
+	max-height: 80vh;
+	box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+}
+
+.slider-arrow {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 2.5rem;
+	color: white;
+	cursor: pointer;
+	user-select: none;
+}
+
+.slider-arrow.left {
+	left: -50px;
+}
+
+.slider-arrow.right {
+	right: -50px;
+}
+
+.slider-close {
+	position: absolute;
+	top: -40px;
+	right: 0;
+	font-size: 2rem;
+	color: white;
+	cursor: pointer;
+
+	@include md-min {
+		right: -200px;
+	}
 }
