--- a/src/assets/styles/highlights.scss
+++ b/src/assets/styles/highlights.scss
@@ -15,6 +15,7 @@
 .highlights__item {
 	width: 100%;
 	background-color: var(--main-color);
+
 	padding: 20px;
 	min-height: 250px;
 	position: relative;
@@ -28,6 +29,10 @@
 		height: 0;
 		border-top: 30px solid var(--white-color);
 		border-left: 30px solid transparent;
+	}
+
+	* {
+		color: var(--white-color);
 	}
 
 	svg {
