--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -36,6 +36,7 @@
 	font-size: 30px;
 	padding: 0 20px;
 	text-transform: uppercase;
+	color: var(--white-color);
 
 	@include md-min {
 		font-size: 40px;
@@ -58,6 +59,7 @@
 	text-transform: uppercase;
 	font-size: 18px;
 	margin: 10px 0;
+	color: var(--white-color);
 }
 
 .header__scroll-line {
