--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -14,7 +14,7 @@
 
 	&.menu-scrolled {
 		width: 100%;
-		background-color: #ebe9e9;
+		background-color: var(--white-color);
 		color: #000;
 	}
 }
@@ -35,6 +35,7 @@
 	font-weight: 400;
 	font-size: 14px;
 	color: var(--white-color);
+	cursor: pointer;
 
 	@include md-min {
 		font-size: 30px;
@@ -88,7 +89,7 @@
 	left: 0;
 	width: 100vw;
 	height: 100vh;
-	background-color: #fff;
+	background-color: var(--white-color);
 	color: #000;
 	z-index: 999;
 	display: flex;
