--- a/src/assets/styles/basic.scss
+++ b/src/assets/styles/basic.scss
@@ -11,13 +11,16 @@
 }
 
 html {
-	overflow-x: hidden;
-	scroll-padding-top: 100px;
+	scroll-padding-top: 150px;
 	height: 100%;
 }
 
+#root {
+	overflow-x: hidden;
+}
+
 body {
-	background-color: #ebe9e9;
+	background-color: var(--white-color);
 	height: 100%;
 }
 
@@ -45,10 +48,6 @@ a {
 	&:hover {
 		color: var(--second-color);
 	}
-}
-
-#root {
-	overflow-x: hidden;
 }
 
 .section {
