--- a/src/assets/styles/work.scss
+++ b/src/assets/styles/work.scss
@@ -5,65 +5,65 @@
 	justify-content: center;
 	align-items: center;
 
-	@include md-min {
-		display: flex;
+	@include xs-min {
 		flex-direction: row;
-		justify-content: space-between;
 		flex-wrap: wrap;
+		padding: 0;
+		justify-content: space-between;
+	}
+
+	@include md-min {
+		gap: 25px;
 	}
 }
 
 .image-grid {
 	background-repeat: no-repeat;
 	background-size: cover;
-	width: 100%;
-	height: 100%;
 	min-height: 300px;
 	background-position: center;
 	cursor: pointer;
+	width: 100%;
+
+	@include xs-min {
+		width: calc(50% - 10px);
+	}
 
 	@include md-min {
-		min-height: 300px;
 		width: 18%;
 	}
 }
 
+// Przypisanie zdjęć
 .image-grid-1 {
-	background-image: url(../../assets//images/slider-img-14.jpg);
+	background-image: url(../../assets/images/slider-img-14.jpg);
 }
-
 .image-grid-2 {
-	background-image: url(../../assets//images/slider-img-15.jpg);
+	background-image: url(../../assets/images/slider-img-15.jpg);
 }
-
 .image-grid-3 {
-	background-image: url(../../assets//images/slider-img-6.jpg);
+	background-image: url(../../assets/images/slider-img-6.jpg);
 }
-
 .image-grid-4 {
-	background-image: url(../../assets//images/slider-img-9.jpg);
+	background-image: url(../../assets/images/slider-img-9.jpg);
 }
-
 .image-grid-5 {
-	background-image: url(../../assets//images/slider-img-8.jpg);
-}
-.image-grid-7 {
-	background-image: url(../../assets//images/slider-img-7.jpg);
-}
-
-.image-grid-8 {
-	background-image: url(../../assets//images/slider-img-4.jpg);
+	background-image: url(../../assets/images/slider-img-8.jpg);
 }
 .image-grid-6 {
-	background-image: url(../../assets//images/slider-img-8.jpg);
+	background-image: url(../../assets/images/slider-img-8.jpg);
 }
-
+.image-grid-7 {
+	background-image: url(../../assets/images/slider-img-7.jpg);
+}
+.image-grid-8 {
+	background-image: url(../../assets/images/slider-img-4.jpg);
+}
 .image-grid-9 {
-	background-image: url(../../assets//images/slider-img-8.jpg);
+	background-image: url(../../assets/images/slider-img-8.jpg);
 }
-
 .image-grid-10 {
-	background-image: url(../../assets//images/slider-img-8.jpg);
+	background-image: url(../../assets/images/slider-img-8.jpg);
 }
 
 .slider-overlay {
@@ -83,12 +83,14 @@
 	position: relative;
 	max-width: 90%;
 	max-height: 90%;
+	z-index: 1000;
 }
 
 .slider-image {
 	max-width: 100%;
 	max-height: 80vh;
 	box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+	object-fit: contain;
 }
 
 .slider-arrow {
@@ -99,14 +101,39 @@
 	color: var(--white-color);
 	cursor: pointer;
 	user-select: none;
+	z-index: 1001;
+
+	@include xs-max {
+		font-size: 2rem;
+	}
+
+	@include md-max {
+		font-size: 2rem;
+	}
 }
 
 .slider-arrow.left {
 	left: -50px;
+
+	@include xs-max {
+		left: 10px;
+	}
+
+	@include md-max {
+		left: 10px;
+	}
 }
 
 .slider-arrow.right {
 	right: -50px;
+
+	@include xs-max {
+		right: 10px;
+	}
+
+	@include md-max {
+		right: 10px;
+	}
 }
 
 .slider-close {
@@ -116,8 +143,14 @@
 	font-size: 2rem;
 	color: var(--white-color);
 	cursor: pointer;
+	z-index: 1001;
 
 	@include md-min {
 		right: -200px;
+	}
+
+	@include md-max {
+		right: 10px;
+		top: 10px;
 	}
 }
