--- a/src/assets/styles/basic.scss
+++ b/src/assets/styles/basic.scss
@@ -22,6 +22,7 @@ html {
 body {
 	background-color: var(--white-color);
 	height: 100%;
+	color: var(--black-color);
 }
 
 * {
@@ -35,7 +36,6 @@ body {
 	font-size: 16px;
 	font-weight: 300;
 	box-sizing: border-box;
-	color: var(--black-color);
 
 	@include md-max {
 		font-size: 14px;
@@ -145,4 +145,19 @@ a {
 .button_icon {
 	display: flex;
 	margin: 0 5px;
+	margin-top: 2px;
+}
+
+.button-section {
+	background-color: var(--main-color);
+	color: var(--white-color);
+	padding: 18px 15px;
+	width: 200px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: nowrap;
+
+	svg {
+		font-size: 20px;
+	}
 }
