--- a/src/assets/styles/highlights.scss
+++ b/src/assets/styles/highlights.scss
@@ -11,18 +11,18 @@
 		padding: 50px 0;
 	}
 }
-
 .highlights__item {
 	width: 100%;
 	background-color: var(--main-color);
-
 	padding: 20px;
 	min-height: 250px;
 	position: relative;
+	border: none; /* <---- DODAJ TO */
+	outline: none; /* <---- DODAJ TO */
 
 	&::before {
 		position: absolute;
-		top: -2px;
+		top: 0;
 		right: 0;
 		content: '';
 		width: 0;
@@ -30,6 +30,33 @@
 		border-top: 30px solid var(--white-color);
 		border-left: 30px solid transparent;
 	}
+
+	* {
+		color: var(--white-color);
+	}
+
+	svg {
+		font-size: 25px;
+	}
+
+	h2 {
+		padding-bottom: 10px;
+	}
+
+	@include md-min {
+		width: 33%;
+		min-height: 350px;
+	}
+}
+
+.highlights__item {
+	width: 100%;
+	background-color: var(--main-color);
+	padding: 20px;
+	min-height: 250px;
+	position: relative;
+	color: var(--white-color);
+	clip-path: polygon(0 0, calc(100% - 30px) 0, 100% 30px, 100% 100%, 0 100%);
 
 	* {
 		color: var(--white-color);
