--- a/src/assets/styles/menu.scss
+++ b/src/assets/styles/menu.scss
@@ -22,7 +22,7 @@
 .menu__inner {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-start;
 	font-size: 20px;
 	color: var(--white-color);
 
@@ -85,7 +85,7 @@
 /* Fullscreen menu */
 .fullscreen-menu {
 	position: fixed;
-	top: 77.5px;
+	top: 60px;
 	left: 0;
 	width: 100vw;
 	height: 100vh;
@@ -135,4 +135,23 @@
 /* Blokuj scroll gdy menu otwarte */
 body.menu-open {
 	overflow: hidden;
+}
+
+.menu-logo {
+	background-image: url(../logo/logo-white.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+	display: block;
+	width: 200px;
+	aspect-ratio: 1/1;
+
+	@include md-max {
+		width: 100px;
+	}
+
+	.menu-scrolled &,
+	.menu-open & {
+		display: none;
+	}
 }
