--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -7,6 +7,7 @@
 	background-attachment: fixed;
 	position: relative;
 	margin-bottom: 30px;
+	background-position: center;
 
 	&:after {
 		position: absolute;
@@ -98,4 +99,3 @@
 		color: #909090;
 	}
 }
-
