--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -3,6 +3,10 @@
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: flex-start;
+	gap: 10px;
+	@include md-min {
+		gap: 20px;
+	}
 }
 
 .contact__col {
@@ -10,7 +14,6 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	gap: 20px;
 }
 
 .contact__circle-text {
