--- a/src/assets/styles/work.scss
+++ b/src/assets/styles/work.scss
@@ -34,7 +34,6 @@
 	}
 }
 
-// Przypisanie zdjęć
 .image-grid-1 {
 	background-image: url(../../assets/images/slider-img-14.jpg);
 }
@@ -51,10 +50,10 @@
 	background-image: url(../../assets/images/slider-img-5.jpg);
 }
 .image-grid-6 {
-	background-image: url(../../assets/images/slider-img-8.jpg);
+	background-image: url(../../assets/images/slider-img-19.jpeg);
 }
 .image-grid-7 {
-	background-image: url(../../assets/images/slider-img-7.jpg);
+	background-image: url(../../assets/images/slider-img-18.jpeg);
 }
 .image-grid-8 {
 	background-image: url(../../assets/images/slider-img-4.jpg);
@@ -64,6 +63,26 @@
 }
 .image-grid-10 {
 	background-image: url(../../assets/images/slider-img-16.jpg);
+}
+
+.image-grid-11 {
+	background-image: url(../../assets/images/slider-img-7.jpg);
+}
+
+.image-grid-12 {
+	background-image: url(../../assets/images/slider-img-8.jpg);
+}
+
+.image-grid-13 {
+	background-image: url(../../assets/images/slider-img-20.jpeg);
+}
+
+.image-grid-14 {
+	background-image: url(../../assets/images/slider-img-21.jpeg);
+}
+
+.image-grid-15 {
+	background-image: url(../../assets/images/slider-img-22.jpg);
 }
 
 .slider-overlay {
